Found a handful of more poktroll instances in the code

--- a/tools/scripts/snapshots/index.html
+++ b/tools/scripts/snapshots/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Poktroll Network Snapshots</title>
+    <title>Pocket Network Snapshots</title>
     <style>
       body {
         font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
@@ -132,7 +132,7 @@
   </head>
   <body>
     <header>
-      <h1>Poktroll Network Snapshots</h1>
+      <h1>Pocket Network Snapshots</h1>
       <p>Download the latest blockchain snapshots to quickly sync your node</p>
     </header>
 
@@ -165,7 +165,7 @@
     <div class="card">
       <h2>Installation Instructions</h2>
       <p>
-        The easiest way to set up a new Poktroll node is to use the official
+        The easiest way to set up a new Pocket node is to use the official
         installer script, which automatically handles downloading and applying
         snapshots:
       </p>
@@ -191,7 +191,7 @@
         <a
           href="https://dev.poktroll.com/operate/cheat_sheets/full_node_cheatsheet"
           target="_blank"
-          >Poktroll Documentation</a
+          >Pocket Network Documentation</a
         >.
       </p>
     </div>
