Formatting and typos

--- a/tools/scripts/snapshots/index.html
+++ b/tools/scripts/snapshots/index.html
@@ -176,8 +176,7 @@
             href="https://dev.poktroll.com/operate/cheat_sheets/full_node_cheatsheet"
             target="_blank"
             class="docs-link"
-            >Full Node Cheat Sheet</a
-          >
+            >Full Node Cheat Sheet</a>
           to install a new node
         </li>
         <li>
@@ -191,8 +190,7 @@
         <a
           href="https://dev.poktroll.com/operate/cheat_sheets/full_node_cheatsheet"
           target="_blank"
-          >Pocket Network Documentation</a
-        >.
+          >Pocket Network Documentation</a>.
       </p>
     </div>
 
