--- a/tools/scripts/snapshots/index_with_pruned.html
+++ b/tools/scripts/snapshots/index_with_pruned.html
@@ -194,8 +194,7 @@
             href="https://dev.poktroll.com/operate/cheat_sheets/full_node_cheatsheet"
             target="_blank"
             class="docs-link"
-            >Full Node Cheat Sheet</a
-          >
+            >Full Node Cheat Sheet</a>
           to install a new node
         </li>
         <li>
@@ -209,8 +208,7 @@
         <a
           href="https://dev.poktroll.com/operate/cheat_sheets/full_node_cheatsheet"
           target="_blank"
-          >Pocket Documentation</a
-        >.
+          >Pocket Documentation</a>.
       </p>
     </div>
 
@@ -285,8 +283,7 @@
       <p>
         Pocket Network Snapshots Service |
         <a href="https://dev.poktroll.com" target="_blank"
-          >Official Documentation</a
-        >
+          >Official Documentation</a>
       </p>
     </footer>
 
